--- a/app/src/main/res/layout/listview_text.xml
+++ b/app/src/main/res/layout/listview_text.xml
@@ -18,25 +18,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
+            android:maxLines="1"
             android:textColor="?android:attr/textColorPrimary"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/stop_distance"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="RtlCompat" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/stop_distance"
-            android:layout_width="wrap_content"
+            android:layout_width="80sp"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:textSize="16sp"
-            android:maxLength="10"
+            android:textAlignment="viewEnd"
+            android:maxLength="11"
+            android:maxLines="1"
             android:textColor="?android:attr/textColorPrimary"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="RtlCompat" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
