--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="units">
-        <item>Imperial (foot/feet/ft.)</item>
-        <item>Metric (meter/meters/m.)</item>
+        <item>Imperial (ft./mi.)</item>
+        <item>Metric (m/km)</item>
     </string-array>
 
     <string-array name="units_value">
-        <item>0</item>
-        <item>1</item>
+        <item>imperial</item>
+        <item>metric</item>
     </string-array>
 </resources>
