--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -5,7 +5,7 @@
         android:id="@+id/search"
         android:icon="@drawable/ic_search_white_24dp"
         android:title="TODO"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always|collapseActionView" />
     <item
         android:id="@+id/more"
         android:icon="@drawable/ic_more_vert_white_24dp"
