--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -11,8 +11,7 @@
         android:id="@+id/warning"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:layout_marginEnd="56dp"
+        android:layout_marginHorizontal="56dp"
         android:text=""
         android:textAlignment="center"
         android:textColor="?android:attr/textColorSecondary"
@@ -25,39 +24,25 @@
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar2"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="?actionBarSize"
+        android:layout_marginEnd="40dp"
         android:background="@color/toolbarColor"
         android:elevation="@dimen/cardview_default_elevation"
-        android:layout_marginEnd="56dp"
-        app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
-        app:layout_constraintTop_toTopOf="parent">
-
-
-<!--        <TextView-->
-<!--            android:id="@+id/bus_title"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_gravity="center_vertical"-->
-<!--            android:textColor="?android:attr/textColorPrimary"-->
-<!--            android:textSize="20sp"-->
-<!--            android:fontFamily="sans-serif-medium"-->
-<!--            android:theme="@style/ThemeOverlay.AppCompat"-->
-<!--            tools:layout_editor_absoluteX="16dp"-->
-<!--            tools:layout_editor_absoluteY="14dp" />-->
-    </com.google.android.material.appbar.MaterialToolbar>
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/ic_arrow_back_white_24dp" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/stop"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/Theme.MaterialComponents.DayNight"
-        app:layout_constraintTop_toBottomOf="@id/toolbar2">
+        android:layout_height="match_parent"
+        android:layout_marginTop="?actionBarSize"
+        android:theme="@style/Theme.MaterialComponents.DayNight">
 
-        <ListView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:divider="@null" />
+            android:divider="@null"
+            android:scrollbars="vertical" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
