--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -10,5 +10,9 @@
             android:key="isMetric"
             android:title="Unit"
             app:useSimpleSummaryProvider="true" />
+        <Preference
+            android:key="isList"
+            android:defaultValue="true"/>
+
     </PreferenceCategory>
 </PreferenceScreen>
