--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#327AB9</color>
+    <color name="colorPrimaryText">@color/colorPrimary</color>
+    <color name="colorOnSurface">@android:color/black</color>
     <color name="colorPrimaryDark">#327AB9</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="white">#FFFFFF</color>
